fix scrollbar issues by forcing to always show

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,7 @@ html, body {
 
 html {
     scroll-behavior: smooth;
+    overflow-y: scroll;
 }
 
 body {
